# shibcheck

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: shibboleth-files.md
src/: cli.rs  config.rs  diff.rs  filter.rs  fix.rs  init_test_idp.rs  main.rs  rc_config.rs  result.rs  watch.rs
src/checks/: cross_references.rs  migration.rs  mod.rs  operational.rs  security.rs  xml_validity.rs
src/model/: attribute_map.rs  attribute_policy.rs  mod.rs  shibboleth_config.rs
src/output/: html.rs  json.rs  mod.rs  sarif.rs  terminal.rs
src/parsers/: attribute_map.rs  attribute_policy.rs  certificate.rs  mod.rs  shibboleth_xml.rs
tests/: integration_test.rs
tests/fixtures/broken/: shibboleth2.xml
tests/fixtures/good/: attribute-map.xml  idp-key.pem  idp-metadata.xml  idp-signing.pem  shibboleth2.xml  sp-cert.pem  sp-key.pem
tests/fixtures/insecure/: attribute-map.xml  shibboleth2.xml
