[package]
name = "shibcheck"
version = "0.3.0"
edition = "2021"
description = "Shibboleth SP Configuration Checker"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
quick-xml = "0.37"
x509-parser = "0.16"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
glob = "0.3"
ureq = "3"
pem = "3"
toml = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
